changed background color

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f5f7fb;   /* soft light grey-blue */
+    background: #eef2f7;   /* soft light grey-blue */
 }
 
 /* Chat container */
